--- a/src/css/components/poject01.css
+++ b/src/css/components/poject01.css
@@ -39,9 +39,11 @@
     position: absolute;
     z-index: 3;
     display: inline-block;
-    font-size: 14rem;
+    font-size: 10rem;
     font-style: normal;
-
+    @mixin atSmall {
+      font-size: 14rem;
+    }
     /* opacity: 0;
     transition: all 0.5s ease-in 0.3s;
     transform: translateY(-100%); */
