--- a/src/css/components/prj01-description.css
+++ b/src/css/components/prj01-description.css
@@ -1,7 +1,7 @@
 .project01__description {
   font-family: 'Marske';
   top: 100%;
-  width: calc(100vw + 10px);
+  width: 100vw;
   color: $mainBlack;
   background-color: #fff;
   padding-bottom: 2rem;
@@ -24,10 +24,10 @@
   }
 
   &__title {
-    font-size: 5.5rem;
+    font-size: 4.5rem;
     padding: 2rem 1rem;
     @mixin atSmall {
-      font-size: 6.5rem;
+      font-size: 5.5rem;
     }
     @mixin atLarge {
       font-size: 133px;
@@ -98,10 +98,11 @@
   &__image-mobile-clear,
   &__image-mobile-rain {
     /* width: 80vw; */
-    width: 225px;
+    width: 170px;
     margin-bottom: 2rem;
 
     @mixin atSmall {
+      width: 225px;
       display: inline-block;
       margin-top: 1rem;
     }
@@ -111,10 +112,11 @@
     }
   }
   &__explanation {
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: center;
     padding: 1rem 2rem;
     @mixin atSmall {
+      font-size: 2rem;
       padding: 3rem 3rem 2rem;
     }
     @mixin atTablet {
@@ -129,9 +131,12 @@
     display: inline-block;
     text-align: center;
     width: 100vw;
-    font-size: 13px;
+    font-size: 11px;
     padding: 3rem 1rem;
     font-family: 'Roboto mono';
+    @mixin atMobileM {
+      font-size: 13px;
+    }
     @mixin atSmall {
       padding: 1rem 3rem;
     }
@@ -148,6 +153,8 @@
   &__grid {
     visibility: hidden;
     font-size: 16px;
+    width: 0;
+    height: 0;
     @mixin atLarge {
       visibility: visible;
 
@@ -161,89 +168,131 @@
   }
 
   &__pair1 {
-    grid-column: 3 / span 1;
-    grid-row: 1 / span 2;
+    /* grid-column: 3 / span 1;
+    grid-row: 1 / span 2; */
     .project01__description--squarebox1 {
       top: 20%;
       left: 26%;
     }
     .project01__description--bar1 {
-      top: calc(20% + -79px);
-      left: calc(26% + 50px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(20% + -79px);
+        left: calc(26% + 50px);
+      }
     }
     .project01__description--specific1 {
-      top: calc(20% + -100px);
-      left: calc(26% + -45px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(20% + -100px);
+        left: calc(26% + -45px);
+      }
     }
   }
 
   &__pair2 {
-    grid-column: 6 / span 2;
-    grid-row: 2 / span 3;
+    /* grid-column: 6 / span 2;
+    grid-row: 2 / span 3; */
 
     .project01__description--squarebox2 {
-      top: 40%;
-      left: 64%;
+      @mixin atLarge {
+        top: 40%;
+        left: 64%;
+      }
     }
     .project01__description--bar2 {
-      top: calc(40% + -80px);
-      left: calc(64% + 20px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(40% + -80px);
+        left: calc(64% + 20px);
+      }
     }
     .project01__description--specific2 {
-      top: calc(40% + -136px);
-      left: calc(64% + -63px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(40% + -136px);
+        left: calc(64% + -63px);
+      }
     }
   }
 
   &__pair3 {
-    grid-column: 8 / span 3;
-    grid-row: 3 / span 3;
+    /* grid-column: 8 / span 3;
+    grid-row: 3 / span 3; */
 
     .project01__description--squarebox3 {
       top: 37%;
       left: 84.2%;
     }
     .project01__description--bar3 {
-      top: calc(37% + 50px);
-      left: calc(84.2% + 50px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(37% + 50px);
+        left: calc(84.2% + 50px);
+      }
     }
     .project01__description--specific3 {
-      top: calc(37% + 140px);
-      left: calc(84.2% + -120px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(37% + 140px);
+        left: calc(84.2% + -120px);
+      }
     }
   }
 
   &__pair4 {
-    grid-column: 2 / span 3;
-    grid-row: 4 / span 3;
+    /* grid-column: 2 / span 3;
+    grid-row: 4 / span 3; */
     .project01__description--squarebox4 {
       top: 45%;
       left: 12.5%;
     }
     .project01__description--bar4 {
-      top: calc(45% + 127px);
-      left: calc(12.5% + 220px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(45% + 127px);
+        left: calc(12.5% + 220px);
+      }
     }
     .project01__description--specific4 {
-      top: calc(45% + 220px);
-      left: calc(12.5% + 80px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(45% + 220px);
+        left: calc(12.5% + 80px);
+      }
     }
   }
 
   &__pair5 {
-    grid-column: 8 / span 3;
-    grid-row: 2 / span 6;
+    /* grid-column: 8 / span 3;
+    grid-row: 2 / span 6; */
     .project01__description--squarebox5 {
       top: 16%;
       left: 80.7%;
     }
     .project01__description--bar5 {
-      top: calc(16% + 339px);
-      left: calc(80.7% + 82px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(16% + 339px);
+        left: calc(80.7% + 82px);
+      }
     }
     .project01__description--specific5 {
-      top: calc(16% + 430px);
-      left: calc(80.7% + -40px);
+      top: 0;
+      left: 0;
+      @mixin atLarge {
+        top: calc(16% + 430px);
+        left: calc(80.7% + -40px);
+      }
     }
   }
 
