--- a/src/css/components/square.css
+++ b/src/css/components/square.css
@@ -2,25 +2,45 @@
   position: absolute;
   border: 1px solid $mainBlack;
   &--daily-weather {
-    width: 100px;
-    height: 60px;
+    width: 0;
+    height: 0;
+    @mixin atLarge {
+      width: 100px;
+      height: 60px;
+    }
   }
   &--suggestion {
-    width: 110px;
-    height: 60px;
+    width: 0;
+    height: 0;
+    @mixin atLarge {
+      width: 110px;
+      height: 60px;
+    }
   }
   &--warning {
-    width: 100px;
-    height: 50px;
+    width: 0;
+    height: 0;
+    @mixin atLarge {
+      width: 100px;
+      height: 50px;
+    }
   }
 
   &--hr-wk-weather {
-    width: 436px;
-    height: 126px;
+    width: 0;
+    height: 0;
+    @mixin atLarge {
+      width: 436px;
+      height: 126px;
+    }
   }
 
   &--background-change {
-    width: 180px;
-    height: 340px;
+    width: 0;
+    height: 0;
+    @mixin atLarge {
+      width: 180px;
+      height: 340px;
+    }
   }
 }
