--- a/src/css/settings/mixins.css
+++ b/src/css/settings/mixins.css
@@ -1,3 +1,8 @@
+@define-mixin atMobileM {
+  @media (min-width: 375px) {
+    @mixin-content;
+  }
+}
 @define-mixin atSmall {
   @media (min-width: 500px) {
     @mixin-content;
